--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "lint": "next lint --max-warnings=0",
+    "prepare": "husky install",
+    "test": "jest",
+    "test:watch": "yarn test --watch"
+  },
+  "lint-staged": {
+    "src/**/*": [
+      "yarn lint --fix", "yarn test --bail"
+    ]
   },
   "dependencies": {
     "@next/font": "13.1.1",
@@ -16,7 +23,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@next/eslint-plugin-next": "^13.1.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.5",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
@@ -27,6 +38,8 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.1.0",
     "prettier": "2.8.1",
     "typescript": "4.9.4"
