--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "test:watch": "yarn test --watch",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public"
+    "build-storybook": "build-storybook -s ./public",
+    "generate": "yarn plop --plopfile ./generators/plopfile.mjs"
   },
   "husky": {
     "hooks": {
@@ -66,6 +67,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.1.0",
+    "plop": "^3.1.1",
     "prettier": "2.8.1",
     "typescript": "4.9.4"
   }
